Clipping Issues

--- a/riverbend/River_Bend_Farm_Stylesheet.css
+++ b/riverbend/River_Bend_Farm_Stylesheet.css
@@ -200,7 +200,7 @@ p.desc {
 		width: 100%;
 		float: left;
 		padding: none;
-		margin-top:150px;
+		margin-top: 175px;
 	}
 	
 	#slideshow {
